bio reactor multi model done && pipes